Fix various problems noted by FindBugs.